# Chatbot-Clinica-PlazaDent

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrega2.ipynb  gpt.ipynb  pyproject.toml  requirements.txt
.Trash-0/info/: parte2.ipynb.trashinfo  untitled.txt.trashinfo
AGENTE/: agent.py  agente_agenda.ipynb  calendar.json  calendar_manager.py  verify_agent.py
scripts/: docker-entrypoint.sh  verify_env.py
